--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -14,7 +14,7 @@
       </tr>
       <tr>
         <td>
-          <a [routerLink]="['/item', product.productCode]">{{ product.productCode }}</a>
+          <a [routerLink]="['/item', product.productCode]">{{ product.productName }}</a>
         </td>
       </tr>
       <tr>
