--- a/src/app/components/products-container/products-container.component.html
+++ b/src/app/components/products-container/products-container.component.html
@@ -13,6 +13,9 @@
     <div *ngFor="let page of pagesArray">
       <button [ngClass]="{'current': page == currentPage}" value="{{ page }}" (click)="setPage($event)">{{ page }}</button>
     </div>
+    <form class='pageForm' (ngSubmit)="setPageInput()" >
+      <input type="text" id="inputPage" name="inputPage" [(ngModel)]="inputPage" autocomplete="off" />
+    </form>
   </div>
 </div>
 
