--- a/src/app/components/product-display/product-display.component.html
+++ b/src/app/components/product-display/product-display.component.html
@@ -1,57 +1,37 @@
 <div class="displayPage" *ngIf="products && products[0]">
+  <div>
+    <img class="displayImg" src="{{ products[0].productImgLink }}" />
+  </div>
   <div class="displayInner" *ngFor="let product of products">
-    <h2>{{ product.productName }}</h2>
-    <table>
-      <tbody>
-        <tr>
-          <td>
-            Name:
-          </td>
-          <td>
-            {{ product.productName }}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Brand:
-          </td>
-          <td>
-            {{ product.productBrand }}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Code:
-          </td>
-          <td>
-            {{ product.productCode }}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Regular price:
-          </td>
-          <td>
-            {{ product.productRegularPrice }}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Current price:
-          </td>
-          <td>
-            {{ product.productPrice }}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Store:
-          </td>
-          <td>
-            {{ product.productStore }}
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <h2>
+      <a href="{{ product.productLink }}">{{ product.productName }}</a>
+    </h2>
+    <div>
+      <a href="{{ product.productLink }}">{{ product.productCode }}</a>
+    </div>
+    <div>
+      <a [routerLink]="['/products', product.productBrand]">{{
+        product.productBrand
+      }}</a>
+    </div>
+    <div class='displayRegularPrice'>
+      <div class='displayPriceTitle'>
+        Regular price:
+      </div>
+      <div>
+        {{ product.productRegularPrice }}
+      </div>
+    </div>
+    <div class='displayDiscountPrice'>
+      <div class='displayPriceTitle'>
+        Current price:
+      </div>
+      <div>
+        <h3>{{ product.productPrice }}</h3>
+      </div>
+    </div>
+    <div>
+      {{ product.productStore }}
+    </div>
   </div>
 </div>
