--- a/src/app/components/products-container/products-container.component.html
+++ b/src/app/components/products-container/products-container.component.html
@@ -1,10 +1,6 @@
-<div class="productsPage" (ngSubmit)="onSubmit()">
-  <div class="searchBox">
-    <app-search-form
-      class="searchBox"
-      (search)="search($event)"
-    ></app-search-form>
-  </div>
+<div class="productsPage">
+  <div [ngClass]="{'show': !products, 'hide': products}"></div>
+  
   <div class="productsContainer">
     <app-product *ngFor="let product of products" [product]="product">
     </app-product>
@@ -16,6 +12,16 @@
     <form class='pageForm' (ngSubmit)="setPageInput()" >
       <input type="text" id="inputPage" name="inputPage" [(ngModel)]="inputPage" autocomplete="off" />
     </form>
+    <select [(ngModel)]="selectedOrder" (change)="onChangeOrder()">
+      <option *ngFor="let op of orderOptions" [ngValue]="op">{{
+        op.title
+      }}</option>
+    </select>
+    <select [(ngModel)]="itemsPerPage" (change)="onChangePage()">
+      <option *ngFor="let op of pageOptions" [ngValue]="op">{{
+        op
+      }}</option>
+    </select>
   </div>
 </div>
 
